--- a/stylesheets/scss/grid.scss
+++ b/stylesheets/scss/grid.scss
@@ -15,6 +15,10 @@ $columns: 12;
 // Set $total-width to 100% for a fluid layout
 $total-width: gridsystem-width($columns);
 
+@function column-width($x:$columns) {
+	@return $total-width*(((($gutter-width+$column-width)*$x)-$gutter-width) / gridsystem-width($columns));
+}
+
 // Uncomment these two lines and the star-hack width/margin lines below to enable sub-pixel fix for IE6 & 7. See http://tylertate.com/blog/2012/01/05/subpixel-rounding.html
 // $min-width: 999999;
 // $correction: 0.5 / $min-width * 100;
@@ -43,18 +47,18 @@ body {
 	@include clearfix();
 }
 
-@mixin row($columns:$columns) {
+@mixin row($x) {
 	display: block;
-	width: $total-width*(($gutter-width + gridsystem-width($columns))/gridsystem-width($columns));
-	margin: 0 $total-width*((($gutter-width*.5)/gridsystem-width($columns))*-1);
+	width: column-width($x) + $gutter-width;
+	margin-left: -$gutter-width/2;
 	// *width: $total-width*(($gutter-width + gridsystem-width($columns))/gridsystem-width($columns))-$correction;
 	// *margin: 0 $total-width*((($gutter-width*.5)/gridsystem-width($columns))*-1)-$correction;
 	@include clearfix();
 }
-@mixin column($x,$columns:$columns) {
+@mixin column($x) {
 	display: inline;
 	float: left;
-	width: $total-width*(((($gutter-width+$column-width)*$x)-$gutter-width) / gridsystem-width($columns));
+	width: column-width($x);
 	margin: 0 $total-width*(($gutter-width*.5)/gridsystem-width($columns));
 	// *width: $total-width*(((($gutter-width+$column-width)*$x)-$gutter-width) / gridsystem-width($columns))-$correction;
 	// *margin: 0 $total-width*(($gutter-width*.5)/gridsystem-width($columns))-$correction;
